# scisquad

./: .gitignore  LICENSE  README.md  pyproject.toml
SciSquad/scisquad/api/: base.py  domain.py  player_search.py
SciSquad/scisquad/insights/: league.py
SciSquad/scisquad/model/: entities.py  recommendations.py
SciSquad/scisquad/recommendations/: alerts.py
demos/: basic_team_analysis.ipynb  guided_player_search.ipynb
scisquad/api/: entities.py  management.py  player_search.py
scisquad/insights/: league.py  squad.py
scisquad/planning/: scout.py
tests/api/: entities.py
