
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scisquad"
version = "0.1.0"
description = "SciSports Squad Management: Process, Analyze, Visualize & Demonstrate."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Floris Goes, PhD", email = "f.goes@scisports.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Creative Commons BY-NC 4.0",
  "Operating System :: OS Independent"
]
dependencies = [
    "tqdm>=4.67.1",
    "pandas>=2.2.1",
    "requests>=2.32.4",
    "python-dotenv>=1.1.1"
]

[tool.setuptools.packages.find]
where = ["scisquad"]
